--- a/.github/workflows/crawling.yml
+++ b/.github/workflows/crawling.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    # UTC 기준 23:00 (한국 시간 오전 8:00)
-    - cron: '0 23 * * *'
+    # UTC 기준 23:00(전날), 01:00, 03:00, 05:00 (한국 시간 08, 10, 12, 14시)
+    - cron: '0 23,1,3,5 * * *'
   workflow_dispatch: # 수동 실행 버튼 활성화
 
 jobs:
