--- a/.github/workflows/crawling.yml
+++ b/.github/workflows/crawling.yml
@@ -1,12 +1,13 @@
-name: Naver News Crawler
+name: Market News Crawler & Analyst
 
 on:
   push:
     branches: [ "main" ]
   schedule:
-    # UTC 기준 23:00(전날), 01:00, 03:00, 05:00 (한국 시간 08, 10, 12, 14시)
-    - cron: '0 23,1,3,5 * * *'
-  workflow_dispatch: # 수동 실행 버튼 활성화
+    # UTC 기준 23:00 (KST 08:00) - 아침 브리핑
+    # UTC 기준 09:00 (KST 18:00) - 마감 브리핑
+    - cron: '0 23,9 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -28,19 +29,31 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run crawler
+    - name: Run Crawlers
       run: |
+        echo "Running Naver Crawler..."
         python inspect_naver.py
+        
+        echo "Running Yahoo Crawler..."
+        python crawling_yahoo.py
 
-    - name: Commit and Push results
+    - name: Run Market Analysis (Gemini + Slack)
+      env:
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       run: |
-        git config --global user.name "GitHub Action Bot"
-        git config --global user.email "action@github.com"
-        git add news_data.csv
+        python analyze_market.py
+
+    - name: Commit and Push Data
+      run: |
+        git config --global user.name "Market Bot"
+        git config --global user.email "bot@market.com"
+        git add news_data.csv yahoo_news.csv
+        
         # Check if there are changes to commit
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Update news data: $(date +'%Y-%m-%d')"
+          git commit -m "Update market data: $(date +'%Y-%m-%d')"
           git push
         fi
